--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 		href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest"
 		href="%PUBLIC_URL%/manifest.json" />
-	<title>React App</title>
+	<title>Rock Paper Scissor</title>
 </head>
 <body>
 	<noscript>
